--- a/options/options.css
+++ b/options/options.css
@@ -1,46 +1,71 @@
-
 body {
-  width: 25em;
-  font-family: "Open Sans Light", sans-serif;
-  font-size: 0.9em;
-  font-weight: 300;
-  background-color: black;
-  color: white;
+    width: 25em;
+    font-family: "Open Sans Light", sans-serif;
+    font-size: 0.9em;
+    font-weight: 300;
+    background-color: black;
+    color: white;
 }
 
 section.clear-options {
-  padding: 0.5em 0;
-  margin: 1em 0;
+    padding: 0.5em 0;
+    margin: 1em 0;
 }
 
 #clear-button {
-  margin: 0 1.3em 1em 0;
+    margin: 0 1.3em 1em 0;
 }
 
 section.clear-options input,
-section.clear-options>select,
+section.clear-options > select,
 #clear-button {
-  float: right;
+    float: right;
 }
 
 label {
-  display: block;
-  padding: 0.2em 0;
+    display: block;
+    padding: 0.2em 0;
 }
 
 label:hover {
-  background-color: #000044;
-  color: lime;
-  cursor: pointer;
-
+    background-color: #000044;
+    color: lime;
+    cursor: pointer;
 }
 
 .title {
-  font-size: 1.2em;
-  margin-bottom: 0.5em;
-  color: orange;
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
+    color: orange;
 }
 
-p{
-  color: lightgray;
+p {
+    color: lightgray;
+}
+
+/* CSS */
+.button-12 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+    border-radius: 6px;
+    border: none;
+
+    background: #6e6d70;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1),
+        inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
+        0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
+    color: #dfdedf;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-12:focus {
+    box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),
+        0px 0.5px 1px rgba(0, 0, 0, 0.1),
+        0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+    outline: 0;
 }
