--- a/options/options.css
+++ b/options/options.css
@@ -3,7 +3,7 @@ body {
     font-family: "Open Sans Light", sans-serif;
     font-size: 0.9em;
     font-weight: 300;
-    background-color: black;
+    background-color: #000;
     color: white;
 }
 
@@ -28,15 +28,15 @@ label {
 }
 
 label:hover {
-    background-color: #000044;
-    color: lime;
     cursor: pointer;
 }
 
 .title {
-    font-size: 1.2em;
-    margin-bottom: 0.5em;
-    color: orange;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+    color: red;
+    font-weight: 600;
+    background-color: black;
 }
 
 p {
@@ -51,9 +51,9 @@ p {
     padding: 6px 14px;
     font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
     border-radius: 6px;
-    border: none;
+    border: 1px solid red;
 
-    background: #6e6d70;
+    background: rgba(50, 50, 50, 0.2);
     box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1),
         inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
         0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
@@ -68,4 +68,95 @@ p {
         0px 0.5px 1px rgba(0, 0, 0, 0.1),
         0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
     outline: 0;
+}
+
+.button-12:hover {
+    background: rgba(250, 50, 50, 0.5);
+
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.toggle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Vertical */
+    font-size: 1rem;
+    padding: 4px;
+    font-weight: 300;
+    border-radius: 10px;
+}
+
+.switch input {
+    display: none;
+}
+
+.switch {
+    display: inline-block;
+    width: 60px; /*=w*/
+    height: 15px; /*=h*/
+    margin: 4px;
+    /* transform: translateY(50%); */
+    position: relative;
+}
+
+.slider {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 30px;
+    box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+    cursor: pointer;
+    border: 4px solid transparent;
+    overflow: hidden;
+    transition: 0.2s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #777;
+    border-radius: 30px;
+    transform: translateX(-30px); /*translateX(-(w-h))*/
+    transition: 0.2s;
+}
+
+input:checked + .slider:before {
+    transform: translateX(30px); /*translateX(w-h)*/
+    background-color: limeGreen;
+}
+
+input:checked + .slider {
+    box-shadow: 0 0 0 2px limeGreen, 0 0 8px limeGreen;
+}
+
+.switch200 .slider:before {
+    /* width: 200%; */
+    transform: translateX(-82px); /*translateX(-(w-h))*/
+}
+
+.switch200 input:checked + .slider:before {
+    background-color: red;
+}
+
+.switch200 input:checked + .slider {
+    box-shadow: 0 0 0 2px red, 0 0 8px red;
+}
+
+#popup > div:nth-child(odd) {
+    background-color: rgba(50, 50, 50, 0.2);
+}
+
+/* to color even children in parent-container with children of type div */
+#popup > div:nth-child(even) {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+    display: flex;
+    justify-content: space-between;
 }
