--- a/options/options.css
+++ b/options/options.css
@@ -3,8 +3,16 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
     font-size: 0.9em;
     font-weight: 300;
-    background-color: #000;
+
+    background: rgb(17,17,17);
+    background: linear-gradient(0deg, rgba(10,10,10,1) 0%, rgba(5,5,5,1) 100%);
+    
     color: white;
+
+    -webkit-user-select: none important!; /* Safari */
+    -webkit-user-drag: none important!;
+    -ms-user-select: none important!; /* IE 10 and IE 11 */
+    user-select: none important!; /* Standard syntax */
 }
 
 section.clear-options {
@@ -48,7 +56,7 @@ label:hover {
     margin-bottom: 0.5rem;
     color: lightgray;
     font-weight: 100;
-    background-color: black;
+    background-color: #000;
     font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
 }
 
@@ -155,14 +163,28 @@ input:checked + .slider:before {
     box-shadow: 0 0 0 2px red, 0 0 8px red;
 }
 
+
+#popup{
+    margin-bottom: 10px;
+}
+
 #popup > div:nth-child(odd) {
-    background-color: rgba(50, 50, 50, 0.2);
+    background-color: rgba(30, 30, 30, 0.1);
+    color:gray;
 }
 
 /* to color even children in parent-container with children of type div */
 #popup > div:nth-child(even) {
     background-color: rgba(0, 0, 0, 0.1);
+    margin-top: 1px;
+    color: gray;
 }
+
+#popup > div:hover {
+    cursor: pointer;
+    color: red;
+}
+
 
 .footer {
     display: flex;
@@ -190,6 +212,7 @@ input:checked + .slider:before {
 .ip {
     filter: saturate(0%);
     margin: 5px;
+    margin-left: -2px;
 }
 
 .ip:hover {
@@ -205,3 +228,68 @@ input:checked + .slider:before {
     color: #555;
     margin-top:-10px;
 }
+
+/* Custom Select */
+.custom-select {
+    position: relative;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border: 1px solid rgba(124, 11, 9, 1);
+    border-radius:5px;
+  }
+  
+  .custom-select select {
+    display: none; /*hide original SELECT element: */
+  }
+  
+  .select-selected {
+    background-color: rgba(124, 11, 9, 0.2);
+    border-radius:5px;
+  }
+  
+  /* Style the arrow inside the select element: */
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+  
+  /* Point the arrow upwards when the select box is open (active): */
+  .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+  
+  /* style the items (options), including the selected item: */
+  .select-items div,.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    /* border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent; */
+    cursor: pointer;
+  }
+  
+  /* Style items (options): */
+  .select-items {
+    position: absolute;
+    background-color: rgba(124, 11, 9, 1);
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius:5px;
+  }
+  
+  /* Hide the items when the select box is closed: */
+  .select-hide {
+    display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
