--- a/options/options.css
+++ b/options/options.css
@@ -1,304 +1,259 @@
 body {
-    width: 20em;
-    font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
-    font-size: 0.9em;
-    font-weight: 300;
-
-    background: rgb(17,17,17);
-    background: linear-gradient(0deg, rgba(10,10,10,1) 0%, rgba(5,5,5,1) 100%);
-    
-    color: white;
-
-    -webkit-user-select: none important!; /* Safari */
-    -webkit-user-drag: none important!;
-    -ms-user-select: none important!; /* IE 10 and IE 11 */
-    user-select: none important!; /* Standard syntax */
+	width: 20em;
+	font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+	font-size: 0.9em;
+	font-weight: 300;
+	background: rgb(17,17,17);
+	background: linear-gradient(0deg, rgba(10,10,10,1) 0%, rgba(5,5,5,1) 100%);
+	color: white;
+	-webkit-user-select: none important!;
+	/* Safari */
+	-webkit-user-drag: none important!;
+	-ms-user-select: none important!;
+	/* IE 10 and IE 11 */
+	user-select: none important!;
+	/* Standard syntax */
 }
-
 section.clear-options {
-    padding: 0.5em 0;
-    margin: 1em 0;
+	padding: 0.5em 0;
+	margin: 1em 0;
 }
-
 #clear-button {
-    margin: 0 1.3em 1em 0;
+	margin: 0 1.3em 1em 0;
 }
-
-section.clear-options input,
-section.clear-options > select,
-#clear-button {
-    float: right;
+section.clear-options input,section.clear-options > select,#clear-button {
+	float: right;
 }
-
 label {
-    display: block;
-    padding: 0.2em 0;
+	display: block;
+	padding: 0.2em 0;
 }
-
 label:hover {
-    cursor: pointer;
+	cursor: pointer;
 }
-
 .logo {
-    margin-top: -10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    justify-items: center;
+	margin-top: -10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	justify-items: center;
 }
-
 .icon {
-    margin-top: -5px;
+	margin-top: -5px;
 }
-
 .title {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-    color: lightgray;
-    font-weight: 100;
-    background-color: #000;
-    font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+	font-size: 1.5rem;
+	margin-bottom: 0.5rem;
+	color: lightgray;
+	font-weight: 100;
+	background-color: #000;
+	font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
 }
-
 p {
-    color: lightgray;
+	color: lightgray;
 }
-
 /* CSS */
 .button-12 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 6px 14px;
-    font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
-    border-radius: 6px;
-    border: 1px solid rgba(250, 50, 50, 0.1);
-
-    background: rgba(50, 50, 50, 0.2);
-    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.5),
-        inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
-        0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
-    color: #dfdedf;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 6px 14px;
+	font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+	border-radius: 6px;
+	border: 1px solid rgba(250, 50, 50, 0.1);
+	background: rgba(50, 50, 50, 0.2);
+	box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.5),inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
+	color: #dfdedf;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
 }
-
 .button-12:focus {
-    box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),
-        0px 0.5px 1px rgba(0, 0, 0, 0.1),
-        0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
-    outline: 0;
+	box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),0px 0.5px 1px rgba(0, 0, 0, 0.1),0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+	outline: 0;
 }
-
 .button-12:hover {
-    background: rgba(250, 50, 50, 0.5);
-
-    transition: 0.2s;
-    cursor: pointer;
+	background: rgba(250, 50, 50, 0.5);
+	transition: 0.2s;
+	cursor: pointer;
 }
-
 .toggle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; /* Vertical */
-    font-size: 1rem;
-    padding: 2px;
-    font-weight: 300;
-    border-radius: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* Vertical */
+	font-size: 1rem;
+	padding: 2px;
+	font-weight: 300;
+	border-radius: 10px;
 }
-
 .switch input {
-    display: none;
+	display: none;
 }
-
 .switch {
-    display: inline-block;
-    width: 60px; /*=w*/
-    height: 15px; /*=h*/
-    margin: 4px;
-    /* transform: translateY(50%); */
-    position: relative;
+	display: inline-block;
+	width: 60px;
+	/*=w*/
+	height: 15px;
+	/*=h*/
+	margin: 4px;
+	/* transform: translateY(50%);
+	*/
+	position: relative;
 }
-
 .slider {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-radius: 30px;
-    box-shadow: 0 0 0 2px #777, 0 0 4px #777;
-    cursor: pointer;
-    border: 4px solid transparent;
-    overflow: hidden;
-    transition: 0.1s;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	border-radius: 30px;
+	box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+	cursor: pointer;
+	border: 4px solid transparent;
+	overflow: hidden;
+	transition: 0.1s;
 }
-
 .slider:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: #777;
-    border-radius: 30px;
-    transform: translateX(-30px); /*translateX(-(w-h))*/
-    transition: 0.1s;
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	background-color: #777;
+	border-radius: 30px;
+	transform: translateX(-30px);
+	/*translateX(-(w-h))*/
+	transition: 0.1s;
 }
-
 input:checked + .slider:before {
-    transform: translateX(30px); /*translateX(w-h)*/
+	transform: translateX(30px);
+	/*translateX(w-h)*/
 }
-
 .switch200 .slider:before {
-    /* width: 200%; */
-    transform: translateX(-42px); /*translateX(-(w-h))*/
+	/* width: 200%;
+	*/
+	transform: translateX(-42px);
+	/*translateX(-(w-h))*/
 }
-
 .switch200 input:checked + .slider:before {
-    background-color: red;
+	background-color: red;
 }
-
 .switch200 input:checked + .slider {
-    box-shadow: 0 0 0 2px red, 0 0 8px red;
+	box-shadow: 0 0 0 2px red, 0 0 8px red;
 }
-
-
 #popup{
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
-
 #popup > div:nth-child(odd) {
-    background-color: rgba(30, 30, 30, 0.1);
-    color:gray;
+	background-color: rgba(30, 30, 30, 0.1);
+	color:gray;
 }
-
 /* to color even children in parent-container with children of type div */
 #popup > div:nth-child(even) {
-    background-color: rgba(0, 0, 0, 0.1);
-    margin-top: 1px;
-    color: gray;
+	background-color: rgba(0, 0, 0, 0.1);
+	margin-top: 1px;
+	color: gray;
 }
-
 #popup > div:hover {
-    cursor: pointer;
-    color: red;
+	cursor: pointer;
+	color: red;
 }
-
-
 .footer {
-    display: flex;
-    height: 15px;
-    justify-content: left;
-    align-items: left;
-    justify-items: center;
-    font-size: 0.8em;
-    font-style: italic;
+	display: flex;
+	height: 15px;
+	justify-content: left;
+	align-items: left;
+	justify-items: center;
+	font-size: 0.8em;
+	font-style: italic;
 }
-
 .footer_seal{
-    margin-top: -5px;
-
+	margin-top: -5px;
 }
-
 .footer_label {
-    display: flex;
-    flex-direction: column;
-    height:33px;
-    margin-top:-10px;
-
+	display: flex;
+	flex-direction: column;
+	height:33px;
+	margin-top:-10px;
 }
-
 .ip {
-    filter: saturate(0%);
-    margin: 5px;
-    margin-left: -2px;
+	filter: saturate(0%);
+	margin: 5px;
+	margin-left: -2px;
 }
-
 .ip:hover {
-    filter: saturate(100%);
-    cursor: pointer;
+	filter: saturate(100%);
+	cursor: pointer;
 }
-
 #brand {
-    color: #555;
+	color: #555;
 }
-
 #version {
-    color: #555;
-    margin-top:-10px;
+	color: #555;
+	margin-top:-10px;
 }
-
 /* Custom Select */
 .custom-select {
-    position: relative;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border: 1px solid rgba(124, 11, 9, 1);
-    border-radius:5px;
-  }
-  
-  .custom-select select {
-    display: none; /*hide original SELECT element: */
-  }
-  
-  .select-selected {
-    background-color: rgba(124, 11, 9, 0.2);
-    border-radius:5px;
-  }
-  
-  /* Style the arrow inside the select element: */
-  .select-selected:after {
-    position: absolute;
-    content: "";
-    top: 14px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border: 6px solid transparent;
-    border-color: #fff transparent transparent transparent;
-  }
-  
-  /* Point the arrow upwards when the select box is open (active): */
-  .select-selected.select-arrow-active:after {
-    border-color: transparent transparent #fff transparent;
-    top: 7px;
-  }
-  
-  /* style the items (options), including the selected item: */
-  .select-items div,.select-selected {
-    color: #ffffff;
-    padding: 8px 16px;
-    /* border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent; */
-    cursor: pointer;
-  }
-  
-  /* Style items (options): */
-  .select-items {
-    position: absolute;
-    background-color: rgba(124, 11, 9, 1);
-    top: 100%;
-    left: 0;
-    right: 0;
-    z-index: 99;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius:5px;
-  }
-  
-  /* Hide the items when the select box is closed: */
-  .select-hide {
-    display: none;
-  }
-  
-  .select-items div:hover, .same-as-selected {
-    background-color: rgba(0, 0, 0, 0.2);
-  }
-
-
-  .unselectable{
-    -moz-user-select: none; 
-    -webkit-user-select: none; 
-    -ms-user-select:none; 
-    user-select:none;
-    -o-user-select:none;
-  }
+	position: relative;
+	margin-top: 5px;
+	margin-bottom: 10px;
+	border: 1px solid rgba(124, 11, 9, 1);
+	border-radius:5px;
+}
+.custom-select select {
+	display: none;
+	/*hide original SELECT element: */
+}
+.select-selected {
+	background-color: rgba(124, 11, 9, 0.2);
+	border-radius:5px;
+}
+/* Style the arrow inside the select element: */
+.select-selected:after {
+	position: absolute;
+	content: "";
+	top: 14px;
+	right: 10px;
+	width: 0;
+	height: 0;
+	border: 6px solid transparent;
+	border-color: #fff transparent transparent transparent;
+}
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+	border-color: transparent transparent #fff transparent;
+	top: 7px;
+}
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+	color: #ffffff;
+	padding: 8px 16px;
+	/* border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+	*/
+	cursor: pointer;
+}
+/* Style items (options): */
+.select-items {
+	position: absolute;
+	background-color: rgba(124, 11, 9, 1);
+	top: 100%;
+	left: 0;
+	right: 0;
+	z-index: 99;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius:5px;
+}
+/* Hide the items when the select box is closed: */
+.select-hide {
+	display: none;
+}
+.select-items div:hover, .same-as-selected {
+	background-color: rgba(0, 0, 0, 0.2);
+}
+.unselectable{
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select:none;
+	user-select:none;
+	-o-user-select:none;
+}
