--- a/src/options/options.css
+++ b/src/options/options.css
@@ -62,7 +62,7 @@ p {
 	font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
 	border-radius: 6px;
 	border: 1px solid rgba(250, 50, 50, 0.1);
-	background: rgba(50, 50, 50, 0.2);
+	background: rgba(94, 255, 0, 0.2);
 	box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.5),inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
 	color: #dfdedf;
 	user-select: none;
@@ -120,7 +120,7 @@ p {
 	content: "";
 	width: 100%;
 	height: 100%;
-	background-color: #777;
+	background-color: #3cff00;
 	border-radius: 30px;
 	transform: translateX(-30px);
 	/*translateX(-(w-h))*/
